--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,9 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Build Ditto
-        run: npm run build:web
+        run: |
+          npm ci
+          npm run build:web
       - uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
