--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: Build Ditto
         run: |
-          npm ci
+          npm install
           npm run build:web
       - uses: peaceiris/actions-gh-pages@v3
         with:
